Fix bullet not centered

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -1850,13 +1850,18 @@ Download page
     opacity:1;
 }
 
+.download-block>a>div>p>img {
+	display: inline;
+	vertical-align: initial;
+}
+
 .download-block>a>div>p {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%);
 	-webkit-transform: translateX(-50%);
-
+	white-space: nowrap;
 }
 
 @media only screen and (max-width:767px){
